# perspective-diff-sync

./: .gitignore  README.md  build.sh  dna.js  index.ts  linksAdapter.ts  package-lock.json  package.json  release.sh  telepresenceAdapter.ts
.github/workflows/: tests.yml
hc-dna/: Cargo.toml  holochain_version.nix
hc-dna/nix/: sources.json
hc-dna/workdir/: dna.yaml
hc-dna/zomes/perspective_diff_sync/: Cargo.toml
hc-dna/zomes/perspective_diff_sync/src/: chunked_diffs.rs  commit.rs  errors.rs  impls.rs  inputs.rs  lib.rs  pull.rs  render.rs  retriever.rs  revisions.rs  search.rs  snapshots.rs  test_graphs.rs  tests.rs  topo_sort.rs  utils.rs  workspace.rs
hc-dna/zomes/perspective_diff_sync/src/link_adapter/: commit.rs  pull.rs  revisions.rs  snapshots.rs  workspace.rs
hc-dna/zomes/perspective_diff_sync/src/retriever/: holochain.rs  mock.rs
hc-dna/zomes/perspective_diff_sync/src/telepresence/: signal.rs  status.rs
hc-dna/zomes/perspective_diff_sync_integrity/: Cargo.toml
hc-dna/zomes/perspective_diff_sync_integrity/src/: impls.rs  lib.rs
hc-dna/zomes/tests/: common.ts  index.ts  package-lock.json  package.json  pull.ts  render.ts  revisions.ts  signals.ts  stress.ts  telepresence.ts  utils.ts
workdir/: dna.yaml
zomes/social_context/: Cargo.toml
zomes/social_context/src/: commit.rs  errors.rs  impls.rs  inputs.rs  lib.rs  methods.rs  pull.rs  render.rs  revisions.rs  search.rs  snapshots.rs  utils.rs
zomes/tests/: common.ts  index.ts  package-lock.json  package.json  pull.ts  render.ts  revisions.ts  signals.ts
