[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "perspective_diff_sync"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "perspective_diff_sync"

[dependencies]
derive_more = "0"
serde = "1"
lazy_static = "*"
chrono = { version = "0.4", features=["serde"] }
hc_time_index = { git = "https://github.com/juntofoundation/HC-Time-Chunking", branch = "main" }
thiserror = "1.0.20"
petgraph = "0.6.2"

hdk = "0.0.123"
holo_hash = "0.0.20"

[features]
prod = []
test = []