[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "perspective_diff_sync_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "perspective_diff_sync_integrity"

[dependencies]
derive_more = "0"
serde = "1"
chrono = { version = "0.4", features=["serde"] }

holochain_deterministic_integrity = "0.0.10"
holo_hash = "0.0.29"
hdk = "0.0.138"
hc_time_index = { path = "../../../../../holochain-time-index" }