[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "perspective_diff_sync_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "perspective_diff_sync_integrity"

[dependencies]
derive_more = "0"
serde = "1"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }

hdi = "0.1.1"
holo_hash = "0.0.31"
hdk = "0.0.151"
hc_time_index = { git = "https://github.com/holochain-open-dev/holochain-time-index" }